# GCI_1_BusinessMachines

./: .cursorrules  README.md  main.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: data.csv
doc/fleeting/: 定量評価可能な静かな退職防止施策検討メモ_20250121.md
doc/gci/: GCI最終課題 README 2025Summer 必須課題 (1).docx  data_dictionary.md  gcirule.md
doc/literature/: 'Quiet quitting is the status quo'.md  A multidimensional quiet quitting scale_ Development and test of a measure of quiet quitting.md  Great_Resignation_and_Quiet_Quitting_as_Post-pande.md  Great_Resignation_and_Quiet_Quitting_as_Post-pandemic_和訳版.md  HR Consulting Trends to Watch in 2025_ Shaping the Future of Work.md  IT企業339社のエンゲージメントを分析！ 低スコアの要因「経営と管理職間の不和」は対話で解消しよう.md  IT業界の離職率は高い？低い？企業がとるべき対策とは _ M&Aベストパートナーズ.md  Is Quiet Quitting Real_.md  Maximising Employee Engagement Through HR Best Practices in IT.md  Modelling the significance of organizational conditions on quiet quitting intention among Gen Z workforce in an emerging economy - Scientific Reports.md  Perplexity.md  Quiet quitting during COVID-19_ the role of psychological empowerment - Humanities and Social Sciences Communications.md  The hidden costs of quiet quitting, quantified _ United Kingdom.md  gaikyou.md  コロナ禍以降の静かな退職問題の総合分析.md  企業は「静かな退職」とどう向き合うべきか －シリーズ「静かな退職」を考える2－ _ マイナビキャリアリサーチLab.md  業績 - 日本 _ IBM.md  正社員の静かな退職に関する調査2025年（2024年実績） _ マイナビキャリアリサーチLab.md  離職防止の成功事例12選｜効果がある施策・アイデアをご紹介.md  静かな退職を防ぐには？挑戦意欲を見逃さない人事制度のつくり方 _ すべらない転職.md
doc/teian/: 提案資料作成方針と検討ポイント.md
(+27 files in other folders)
