[project]
name = "gci-1-businessmachines-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "imbalanced-learn>=0.12.4",
    "japanize-matplotlib>=1.1.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "xgboost>=3.0.2",
]
